--- a/paradialog.ui
+++ b/paradialog.ui
@@ -60,7 +60,7 @@
     <string/>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>2</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -69,7 +69,7 @@
     <widget class="QLabel" name="label">
      <property name="geometry">
       <rect>
-       <x>110</x>
+       <x>120</x>
        <y>110</y>
        <width>81</width>
        <height>21</height>
@@ -82,7 +82,7 @@
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>110</x>
+       <x>120</x>
        <y>150</y>
        <width>81</width>
        <height>21</height>
@@ -95,7 +95,7 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>110</x>
+       <x>120</x>
        <y>190</y>
        <width>81</width>
        <height>21</height>
@@ -108,7 +108,7 @@
     <widget class="QLabel" name="label_4">
      <property name="geometry">
       <rect>
-       <x>80</x>
+       <x>90</x>
        <y>230</y>
        <width>111</width>
        <height>21</height>
@@ -121,9 +121,9 @@
     <widget class="QLineEdit" name="lineEdit_laserRPF">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>200</x>
        <y>111</y>
-       <width>101</width>
+       <width>71</width>
        <height>21</height>
       </rect>
      </property>
@@ -134,9 +134,9 @@
     <widget class="QLineEdit" name="lineEdit_laserPulseWidth">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>200</x>
        <y>151</y>
-       <width>101</width>
+       <width>71</width>
        <height>20</height>
       </rect>
      </property>
@@ -144,9 +144,9 @@
     <widget class="QLineEdit" name="lineEdit_laserWaveLength">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>200</x>
        <y>191</y>
-       <width>101</width>
+       <width>71</width>
        <height>20</height>
       </rect>
      </property>
@@ -154,9 +154,9 @@
     <widget class="QLineEdit" name="lineEdit_AOM_Freq">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>200</x>
        <y>231</y>
-       <width>101</width>
+       <width>71</width>
        <height>20</height>
       </rect>
      </property>
@@ -164,7 +164,7 @@
     <widget class="QLabel" name="label_18">
      <property name="geometry">
       <rect>
-       <x>290</x>
+       <x>270</x>
        <y>111</y>
        <width>31</width>
        <height>21</height>
@@ -177,7 +177,7 @@
     <widget class="QLabel" name="label_19">
      <property name="geometry">
       <rect>
-       <x>290</x>
+       <x>270</x>
        <y>151</y>
        <width>31</width>
        <height>21</height>
@@ -190,7 +190,7 @@
     <widget class="QLabel" name="label_24">
      <property name="geometry">
       <rect>
-       <x>290</x>
+       <x>270</x>
        <y>231</y>
        <width>41</width>
        <height>21</height>
@@ -203,7 +203,7 @@
     <widget class="QLabel" name="label_25">
      <property name="geometry">
       <rect>
-       <x>290</x>
+       <x>270</x>
        <y>191</y>
        <width>31</width>
        <height>21</height>
@@ -218,49 +218,13 @@
     <attribute name="title">
      <string>扫描参数</string>
     </attribute>
-    <widget class="QLabel" name="label_6">
-     <property name="geometry">
-      <rect>
-       <x>150</x>
-       <y>20</y>
-       <width>61</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>俯仰角：</string>
-     </property>
-    </widget>
-    <widget class="QLineEdit" name="lineEdit_elevationAngle">
-     <property name="geometry">
-      <rect>
-       <x>220</x>
-       <y>21</y>
-       <width>61</width>
-       <height>20</height>
-      </rect>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_21">
-     <property name="geometry">
-      <rect>
-       <x>280</x>
-       <y>20</y>
-       <width>21</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string> °</string>
-     </property>
-    </widget>
     <widget class="QGroupBox" name="groupBox">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>60</y>
-       <width>221</width>
-       <height>111</height>
+       <x>230</x>
+       <y>50</y>
+       <width>181</width>
+       <height>121</height>
       </rect>
      </property>
      <property name="title">
@@ -269,8 +233,8 @@
      <widget class="QLabel" name="label_33">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>70</y>
+        <x>20</x>
+        <y>80</y>
         <width>71</width>
         <height>21</height>
        </rect>
@@ -282,8 +246,8 @@
      <widget class="QLabel" name="label_34">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>30</y>
+        <x>150</x>
+        <y>40</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -295,8 +259,8 @@
      <widget class="QLineEdit" name="lineEdit_step_azAngle">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>71</y>
+        <x>90</x>
+        <y>81</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -305,8 +269,8 @@
      <widget class="QLabel" name="label_20">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>30</y>
+        <x>20</x>
+        <y>40</y>
         <width>71</width>
         <height>21</height>
        </rect>
@@ -318,8 +282,8 @@
      <widget class="QLabel" name="label_26">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>70</y>
+        <x>150</x>
+        <y>80</y>
         <width>21</width>
         <height>21</height>
        </rect>
@@ -331,8 +295,8 @@
      <widget class="QLineEdit" name="lineEdit_start_azAngle">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>31</y>
+        <x>90</x>
+        <y>41</y>
         <width>61</width>
         <height>20</height>
        </rect>
@@ -342,10 +306,10 @@
     <widget class="QGroupBox" name="groupBox_2">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>180</y>
-       <width>221</width>
-       <height>161</height>
+       <x>20</x>
+       <y>120</y>
+       <width>191</width>
+       <height>191</height>
       </rect>
      </property>
      <property name="title">
@@ -357,7 +321,7 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>110</x>
+        <x>100</x>
         <y>81</y>
         <width>71</width>
         <height>20</height>
@@ -367,7 +331,7 @@
      <widget class="QLineEdit" name="lineEdit_angleNum">
       <property name="geometry">
        <rect>
-        <x>110</x>
+        <x>100</x>
         <y>41</y>
         <width>71</width>
         <height>20</height>
@@ -377,7 +341,7 @@
      <widget class="QRadioButton" name="radioButton_anglekey">
       <property name="geometry">
        <rect>
-        <x>25</x>
+        <x>20</x>
         <y>40</y>
         <width>81</width>
         <height>21</height>
@@ -390,7 +354,7 @@
      <widget class="QRadioButton" name="radioButton_circlekey">
       <property name="geometry">
        <rect>
-        <x>25</x>
+        <x>20</x>
         <y>80</y>
         <width>81</width>
         <height>21</height>
@@ -403,8 +367,8 @@
      <widget class="QLineEdit" name="lineEdit_SP">
       <property name="geometry">
        <rect>
-        <x>110</x>
-        <y>120</y>
+        <x>40</x>
+        <y>150</y>
         <width>71</width>
         <height>20</height>
        </rect>
@@ -426,14 +390,153 @@
      <widget class="QLabel" name="label_22">
       <property name="geometry">
        <rect>
-        <x>180</x>
-        <y>120</y>
+        <x>110</x>
+        <y>150</y>
         <width>31</width>
         <height>21</height>
        </rect>
       </property>
       <property name="text">
        <string> °/s</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="groupBox_10">
+     <property name="geometry">
+      <rect>
+       <x>230</x>
+       <y>190</y>
+       <width>181</width>
+       <height>121</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>定时设置</string>
+     </property>
+     <widget class="QLabel" name="label_29">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>40</y>
+        <width>81</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>方向间隔：</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_direct_interval">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>40</y>
+        <width>51</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_30">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>40</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string> s</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_36">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>81</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>圆周间隔：</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_circle_interval">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>80</y>
+        <width>51</width>
+        <height>20</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_39">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>80</y>
+        <width>31</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string> min</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QGroupBox" name="groupBox_9">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>60</y>
+       <width>191</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string/>
+     </property>
+     <widget class="QLabel" name="label_21">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>10</y>
+        <width>21</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string> °</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>10</y>
+        <width>61</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>俯仰角：</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_elevationAngle">
+      <property name="geometry">
+       <rect>
+        <x>90</x>
+        <y>11</y>
+        <width>61</width>
+        <height>20</height>
+       </rect>
       </property>
      </widget>
     </widget>
@@ -445,10 +548,10 @@
     <widget class="QGroupBox" name="groupBox_3">
      <property name="geometry">
       <rect>
-       <x>18</x>
+       <x>20</x>
        <y>20</y>
-       <width>151</width>
-       <height>121</height>
+       <width>211</width>
+       <height>111</height>
       </rect>
      </property>
      <property name="title">
@@ -457,9 +560,9 @@
      <widget class="QRadioButton" name="radioButton_doubleCh">
       <property name="geometry">
        <rect>
-        <x>17</x>
-        <y>80</y>
-        <width>171</width>
+        <x>40</x>
+        <y>70</y>
+        <width>121</width>
         <height>21</height>
        </rect>
       </property>
@@ -470,9 +573,9 @@
      <widget class="QRadioButton" name="radioButton_singleCh">
       <property name="geometry">
        <rect>
-        <x>17</x>
-        <y>40</y>
-        <width>141</width>
+        <x>40</x>
+        <y>35</y>
+        <width>111</width>
         <height>21</height>
        </rect>
       </property>
@@ -484,9 +587,9 @@
     <widget class="QGroupBox" name="groupBox_4">
      <property name="geometry">
       <rect>
-       <x>188</x>
-       <y>150</y>
-       <width>221</width>
+       <x>20</x>
+       <y>140</y>
+       <width>211</width>
        <height>201</height>
       </rect>
      </property>
@@ -674,10 +777,10 @@
     <widget class="QGroupBox" name="groupBox_8">
      <property name="geometry">
       <rect>
-       <x>188</x>
+       <x>248</x>
        <y>20</y>
-       <width>221</width>
-       <height>121</height>
+       <width>161</width>
+       <height>321</height>
       </rect>
      </property>
      <property name="title">
@@ -699,8 +802,8 @@
      <widget class="QComboBox" name="comboBox_trig_mode">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>40</y>
+        <x>30</x>
+        <y>75</y>
         <width>103</width>
         <height>22</height>
        </rect>
@@ -721,21 +824,21 @@
        </property>
       </item>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_trigLevel_OR_holdOff">
+     <widget class="QLineEdit" name="lineEdit_trigLevel">
       <property name="geometry">
        <rect>
-        <x>100</x>
-        <y>82</y>
+        <x>30</x>
+        <y>145</y>
         <width>66</width>
         <height>20</height>
        </rect>
       </property>
      </widget>
-     <widget class="QLabel" name="label_level_OR_holdOff">
+     <widget class="QLabel" name="label_level">
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>80</y>
+        <y>115</y>
         <width>65</width>
         <height>21</height>
        </rect>
@@ -744,13 +847,13 @@
        <string>触发电平</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_conversion">
+     <widget class="QPushButton" name="pushButton_conversion_level">
       <property name="geometry">
        <rect>
-        <x>170</x>
-        <y>80</y>
+        <x>100</x>
+        <y>144</y>
         <width>34</width>
-        <height>23</height>
+        <height>22</height>
        </rect>
       </property>
       <property name="font">
@@ -769,7 +872,7 @@
       <property name="geometry">
        <rect>
         <x>84</x>
-        <y>80</y>
+        <y>115</y>
         <width>15</width>
         <height>21</height>
        </rect>
@@ -778,90 +881,75 @@
        <string>：</string>
       </property>
      </widget>
-    </widget>
-    <widget class="QGroupBox" name="groupBox_9">
-     <property name="geometry">
-      <rect>
-       <x>18</x>
-       <y>150</y>
-       <width>151</width>
-       <height>201</height>
-      </rect>
-     </property>
-     <property name="title">
-      <string>定时设置</string>
-     </property>
-     <widget class="QLabel" name="label_15">
+     <widget class="QGroupBox" name="groupBox_11">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>40</y>
-        <width>101</width>
-        <height>21</height>
+        <x>10</x>
+        <y>180</y>
+        <width>141</width>
+        <height>131</height>
        </rect>
       </property>
-      <property name="text">
-       <string>方向间间隔：</string>
+      <property name="title">
+       <string/>
       </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit_direct_interval">
-      <property name="geometry">
-       <rect>
-        <x>30</x>
-        <y>80</y>
-        <width>71</width>
-        <height>20</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_17">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>80</y>
-        <width>21</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string> s</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_27">
-      <property name="geometry">
-       <rect>
-        <x>30</x>
-        <y>120</y>
-        <width>91</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>圆周间间隔：</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit_circle_interval">
-      <property name="geometry">
-       <rect>
-        <x>30</x>
-        <y>160</y>
-        <width>71</width>
-        <height>20</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QLabel" name="label_28">
-      <property name="geometry">
-       <rect>
-        <x>100</x>
-        <y>160</y>
-        <width>41</width>
-        <height>21</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string> min</string>
-      </property>
+      <widget class="QPushButton" name="pushButton_conversion_holdOff_Pre">
+       <property name="geometry">
+        <rect>
+         <x>90</x>
+         <y>89</y>
+         <width>34</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="toolTip">
+        <string>转换成其他单位</string>
+       </property>
+       <property name="text">
+        <string>点</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_Pre_holdOff">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>90</y>
+         <width>66</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton_Pre">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>20</y>
+         <width>89</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>预触发</string>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="radioButton_holdOff">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>55</y>
+         <width>91</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>触发延迟</string>
+       </property>
+      </widget>
      </widget>
     </widget>
    </widget>
